firming up field validations in account creation, combine common code used in both patient creation and staff creation pages

--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -104,330 +104,12 @@
     {%- endif -%}
 </form>
 <a id="redirectLink" href="">&nbsp;</a>
+{%- from "profile_macros.html" import accountCreationScript -%}
+{{accountCreationScript()}}
 {% endblock %}
 {% block footer %}
 {{footer(user=user)}}
 {% endblock %}
 {% block document_ready %}
-
-$.ajaxSetup({
-    timeout: 5000,
-    retryAfter:3000
-});
-
-function setHelpText(elementId, message, hasError) {
-    if (hasError) $("#" + elementId).find(".help-block").text(message).addClass("error-message")
-    else $("#" + elementId).find(".help-block").text("").removeClass("error-message");
-};
-
-
-var AccountCreationObj = function () {
-    this.attempts = 0;
-    this.max_attempts = 3;
-    this.params = null;
-    this.userId = "None created";
-    this.__request = function(params) {
-        if (!params) return false;
-        var errorMessage = "";
-        var self = this;
-        self.attempts++;
-        self.params = params;
-        $.ajax ({
-            type: (params.requestType ? params.requestType : 'GET'),
-            url: String(params.apiUrl).replace('//', '/'),
-            contentType: 'application/json; charset=utf-8',
-            dataType: 'json',
-            async: params.sync ? false : true,
-            data: params.requestData
-        }).done(function(data) {
-            if (params.callback) (params.callback).call(self, {"data": data});
-        }).fail(function(xhr) {
-            if (self.attempts < self.max_attempts) {
-                setTimeout ( function() { self.__request( self.params ) } , $.ajaxSetup().retryAfter );
-            } else {
-                errorMessage = '{{_("Error processing request:")}} ' + params.apiUrl;
-                errorMessage += ";  response status code: " + (parseInt(xhr.status) == 0 ? "request timed out/network error": xhr.status);
-
-                $("#error_response_text").html($.trim(xhr.responseText));
-                var response_text =  $("#error_response_text").text();
-                errorMessage +=";  response text: " + (hasValue(response_text) ? response_text : "no response text returned from server");
-                if (params.callback) (params.callback).call(self, {"error": errorMessage});
-            };
-        });
-        return errorMessage;
-    };
-    this.__setAccount = function() {
-        var orgIDs = $('#userOrgs input:checked').map(function(){
-            return { organization_id: $(this).val() };
-        }).get();
-
-        var _accountArray = {};
-        _accountArray['organizations'] = orgIDs;
-        _accountArray['roles'] =  [{'name': 'patient'}, {'name': 'write_only'}];
-        _accountArray['consents'] = getConsents();
-
-        //reset attempt to 0
-        this.attempts = 0;
-        //note, this will call set demographics to update demographics after
-        this.__request({'apiUrl': '/api/account', 'requestType': 'POST', 'requestData': JSON.stringify(_accountArray), 'sync': true, 'callback': this.__setDemo});
-    };
-    this.__setDemo = function(returnedData) {
-        var responseData = returnedData && returnedData.data? returnedData.data : null;
-        var self = this;
-        if (responseData) {
-
-            self.userId = responseData['user_id'];
-            if (isNaN(self.userId)) {
-                self.__handleError("Invalid user id: " + self.userId);
-                return false;
-            };
-
-            var _demoArray = {};
-            _demoArray['resourceType'] = 'Patient';
-            _demoArray['name'] = {
-                'given': $.trim($('input[name=firstname]').val()),
-                'family':$.trim($('input[name=lastname]').val())
-            };
-            _demoArray['birthDate'] = $('input[name=birthDate]').val();
-
-            _demoArray['telecom'] = [];
-
-            var emailVal = $.trim($('input[name=email]').val());
-            if (hasValue(emailVal)) {
-                _demoArray['telecom'].push({ 'system': 'email', 'value': emailVal });
-            } else {
-                _demoArray['telecom'].push({ 'system': 'email', 'value': '__no_email__'});
-            };
-            _demoArray['telecom'].push({ 'system': 'phone', 'use': 'mobile', 'value': $.trim($('input[name=phone]').val())});
-            _demoArray['telecom'].push({ 'system': 'phone', 'use': 'home', 'value': $.trim($('input[name=altPhone]').val())});
-
-             var orgIDs = $('#userOrgs input:checked').map(function(){
-                return { reference: 'api/organization/'+$(this).val() };
-            }).get();
-
-            _demoArray['careProvider'] = orgIDs;
-
-            var arrCommunication = OT.getCommunicationArray();
-            if (arrCommunication.length > 0) {
-                _demoArray['communication'] = arrCommunication;
-            };
-
-            /*** SYSTEM uri is defined by SYSTEM_IDENTIFIER_ENUM, see main.js for details **/
-            var studyId = $("#profileStudyId").val();
-            if (hasValue(studyId)) {
-                var studyIdObj = {
-                    system: SYSTEM_IDENTIFIER_ENUM["external_study_id"],
-                    use: "secondary",
-                    value: studyId
-                };
-                if (!_demoArray["identifier"]) _demoArray["identifier"] = [];
-                _demoArray["identifier"].push(studyIdObj);
-            };
-
-            var siteId = $("#profileSiteId").val();
-            if (hasValue(siteId)) {
-                var siteIdObj = {
-                    system: SYSTEM_IDENTIFIER_ENUM["external_site_id"],
-                    use: "secondary",
-                    value: siteId
-                };
-                if (!_demoArray["identifier"]) _demoArray["identifier"] = [];
-                _demoArray["identifier"].push(siteIdObj);
-            };
-
-
-            var states = [];
-            $("#userOrgs input[name='organization']").each(function() {
-                if ($(this).is(":checked")) {
-                    if (hasValue($(this).attr("state"))) states.push($(this).attr("state"));
-                };
-            });
-
-            if (states.length > 0) {
-                if (!_demoArray["identifier"]) _demoArray["identifier"] = [];
-                states.forEach(function(state) {
-                    _demoArray["identifier"].push({
-                        system: SYSTEM_IDENTIFIER_ENUM["practice_region"],
-                        use: "secondary",
-                        value: "state:" + state
-                    });
-                });
-            };
-
-            //reset retry attempts to 0
-            this.attempts = 0;
-            self.__request({'apiUrl':'/api/demographics/'+this.userId, 'requestType': 'PUT', 'requestData': JSON.stringify(_demoArray), 'sync': true, 'callback': this.__handleDisplay});
-
-        } else {
-            //Display Error Here
-            if (returnedData.error) {
-               this.__handleError(returnedData.error);
-            };
-            $("#updateProfile").attr("disabled", false);
-        };
-    };
-    this.__handleDisplay = function(responseObj) {
-        var err = responseObj && responseObj.error ? responseObj.error: null;
-        var self = this;
-        if (!hasValue(err)) {
-             $('#confirmMsg').fadeIn();
-            setTimeout(function() { $('#confirmMsg').fadeOut(); }, 800);
-            setTimeout(function() { self.__redirect(self.userId); }, 1000);
-            self.__clear();
-            self.__handleButton();
-        } else {
-            self.__handleError(err);
-        };
-
-    };
-    this.__handleError = function(errorMessage) {
-        if (hasValue(errorMessage)) $('#serviceErrorMsg').html('<small>[Processing error] ' + errorMessage + '</small>').fadeIn();
-        tnthAjax.reportError(this.userId, "{{url_for('patients.patient_profile_create')}}", errorMessage, true);
-        this.__handleButton();
-    };
-    this.__redirect = function() {
-        if (this.userId) {
-            $("#redirectLink").attr('href', '/patients/patient_profile/' + this.userId);
-            $("#redirectLink")[0].click();
-        };
-    };
-    this.__clear = function() {
-        $("input.form-control, select.form-control").each(
-            function() {
-                $(this).val("");
-        });
-    };
-    this.__handleButton = function(vis) {
-        if (vis == "hide") {
-            $("#updateProfile").attr("disabled", true).hide();
-            $(".save-button-container").find(".loading-message-indicator").show();
-        } else {
-            $("#updateProfile").attr("disabled", false).show();
-            $(".save-button-container").find(".loading-message-indicator").hide();
-        };
-    };
-
-    function getParentOrgId(obj) {
-        var parentOrgId =  $(obj).attr("data-parent-id");
-        if (!hasValue(parentOrgId)) parentOrgId = $(obj).closest(".org-container[data-parent-id]").attr("data-parent-id");
-        return parentOrgId;
-    };
-
-    function getConsents() {
-        var orgs = {}, consents = [];
-        $("#createProfileForm input[name='organization']").each(function() {
-            if ($(this).prop("checked")) {
-                var consent_org_id;
-                {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}
-                    consent_org_id = getParentOrgId(this);
-                {% else %}
-                    consent_org_id = $(this).val();
-                {% endif %}
-                if (consent_org_id && !orgs[consent_org_id]) {
-                    orgs[consent_org_id] = true;
-                    var agreement = $("#" + getParentOrgId(this) + "_agreement_url").val();
-                    if (!hasValue(agreement)) {
-                        var stockConsentUrl = $("#stock_consent_url").val();
-                        agreement = stockConsentUrl.replace("placeholder", encodeURIComponent($(this).attr("data-parent-name")));
-                    };
-                    if (hasValue(agreement)) {
-                        consents.push({"organization_id": consent_org_id, "agreement_url": agreement, "staff_editable": true, "include_in_reports": true, "send_reminders": true});
-                    };
-                };
-            };
-        });
-        return consents;
-    };
-};
-
-var aco = new AccountCreationObj();
-
-
-$(document).ready(function(){
-
-
-    $("#createProfileForm .back-button-container").prepend(__getLoaderHTML());
-    $("#createProfileForm .save-button-container").prepend(__getLoaderHTML());
-
-    $("#createProfileForm .btn-tnth-back").on("click", function(e) {
-        e.preventDefault();
-        $(this).prev(".loading-message-indicator").show();
-        $(this).hide();
-        window.location = $(this).attr("href");
-    });
-
-    $("#updateProfile").attr("disabled", true);
-    $("#createProfileForm input, #createProfileForm select").on("change", function() {
-        $("#updateProfile").attr("disabled", false);
-    });
-
-    $("#noEmail").on("click, change", function() {
-        if ($(this).is(":checked")) {
-            $("#erroremail").hide();
-            $("#email").val("").attr("disabled", true).removeAttr("required").removeAttr("data-customemail");
-            setTimeout('$("#erroremail").text(""); $("#email").closest("form-group").removeClass("has-error"); $("#email").css("border-color", "#ccc");', 600);
-        }
-        else {
-            $("#erroremail").show();
-            $("#email").attr("disabled", false).attr("required", "required").attr("data-customemail", "true");
-        };
-    });
-
-    $('#createProfileForm').validator().on('submit', function (e) {
-        if (e.isDefaultPrevented()) {
-            // handle the invalid form...
-            $("input[type='text'], select").each(function() {
-                if (!hasValue($(this).val())) {
-                    //this should display error message associated with empty field
-                    $(this).trigger("change");
-                };
-            });
-            $("#errorMsg").fadeIn("slow");
-            return false;
-        } else {
-
-           var hasError = false;
-
-            if (!$("#noEmail").is(":checked")) {
-                if ($("#emailGroup").hasClass("has-error")) {
-                    hasError = true;
-                } else {
-
-                    if ($("#current_user_email").val() === $("#email").val()) {
-                        setHelpText("emailGroup", "{{_('Email is already in use.')}}", true);
-                    } else {
-                        setHelpText("emailGroup", "", false);
-                    };
-                };
-            };
-
-            if ($("#userOrgs input:checked").length == 0) {
-               setHelpText("userOrgs", "{{_('An organization must be selected.')}}", true);
-            } else setHelpText("userOrgs", "", false);
-
-
-            $("#createProfileForm .help-block.with-errors").each(function() {
-                if (!hasError) { if ($(this).text() != "") hasError = true };
-            });
-
-            if (hasError) {
-                $("#errorMsg").fadeIn("slow");
-                return false;
-            } else {
-                $("#errorMsg").hide();
-                hasError = false;
-            };
-
-            // everything looks good!
-            e.preventDefault();
-            $('#errorMsg').hide();
-            $('#serviceErrorMsg').html('').hide();
-
-            aco.__handleButton("hide");
-            setTimeout("aco.__setAccount();", 0);
-
-        };
-    });
-
-});
+    var aco = new AccountCreationObj();
 {% endblock %}
