--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -86,233 +86,13 @@
     {%- endif -%}
 </form>
 <a id="redirectLink" href="">&nbsp;</a>
-
-{% endblock %}
-
-{% block document_ready %}
-
-
-function _redirect(userId) {
-    if (userId) {
-        $("#redirectLink").attr('href', '/profile/' + userId);
-        $("#redirectLink")[0].click();
-    };
-};
-
-$(document).ready(function(){
-
-    var _userId = '', _demoArray = {}, _accountArray = {};
-    var hasError = false;
-    var errorMessage = '';
-
-    $("#updateProfile").attr("disabled", true);
-    $("#createProfileForm input, #createProfileForm select").on("change", function() {
-        $("#updateProfile").attr("disabled", false);
-    });
-    function getParentOrgId(obj) {
-        var parentOrgId =  $(obj).attr("data-parent-id");
-        if (!hasValue(parentOrgId)) parentOrgId = $(obj).closest(".org-container[data-parent-id]").attr("data-parent-id");
-        return parentOrgId;
-    };
-
-    function getConsents() {
-        var orgs = {}, consents = [];
-        $("#createProfileForm input[name='organization']").each(function() {
-            if ($(this).prop("checked")) {
-                var consent_org_id;
-                {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}
-                    consent_org_id = getParentOrgId(this);
-                {% else %}
-                    consent_org_id = $(this).val();
-                {% endif %}
-                if (consent_org_id && !orgs[consent_org_id]) {
-                    orgs[consent_org_id] = true;
-                    var agreement = $("#" + getParentOrgId(this) + "_agreement_url").val();
-                    if (!hasValue(agreement)) {
-                        var stockConsentUrl = $("#stock_consent_url").val();
-                        agreement = stockConsentUrl.replace("placeholder", encodeURIComponent($(this).attr("data-parent-name")));
-                    };
-                    if (hasValue(agreement)) {
-                        consents.push({"organization_id": consent_org_id, "agreement_url": agreement, "staff_editable": true, "include_in_reports": true, "send_reminders": true});
-                    };
-                };
-            };
-        });
-        return consents;
-    };
-
-    function setHelpText(elementId, message, hasError) {
-        var WARNING_COLOR = "#a94442", NORMAL_COLOR = "#777";
-        if (hasError) $("#" + elementId).find(".help-block").text(message).css("color", WARNING_COLOR);
-        else $("#" + elementId).find(".help-block").text("").css("color", NORMAL_COLOR);
-    };
-
-    $('#createProfileForm').validator().on('submit', function (e) {
-          if (e.isDefaultPrevented()) {
-                // handle the invalid form...
-                $("input[type='text'], select").each(function() {
-                    if (!hasValue($(this).val())) {
-                        //this should display error message associated with empty field
-                        $(this).trigger("change");
-                    };
-                });
-                $("#errorMsg").fadeIn("slow");
-                return false;
-          } else {
-
-                hasError = false;
-
-                if ($("#emailGroup").hasClass("has-error")) {
-                    hasError = true;
-                } else {
-
-                    if ($("#current_user_email").val() === $("#email").val()) {
-                        setHelpText("emailGroup", "Email is already in use.", true);
-                    } else {
-                        setHelpText("emailGroup", "", false);
-                    };
-                };
-
-                if ($("#userOrgs input:checked").length == 0) {
-                   setHelpText("userOrgs", "An organization must be selected.", true);
-                } else setHelpText("userOrgs", "", false);
-
-                $("#createProfileForm .help-block.with-errors").each(function() {
-                    if (!hasError) { if ($(this).text() != "") hasError = true };
-                });
-
-                if (hasError) {
-                    $("#errorMsg").fadeIn("slow");
-                    return false;
-                } else {
-                    $("#errorMsg").hide();
-                    hasError = false;
-                };
-
-                // everything looks good!
-                e.preventDefault();
-                $('#errorMsg').hide();
-                $('#serviceErrorMsg').html('').hide();
-
-
-                $("#updateProfile").attr("disabled", true);
-
-                var orgIDs = $('#userOrgs input:checked').map(function(){
-                    return { organization_id: $(this).val() };
-                }).get();
-
-                _accountArray['organizations'] = orgIDs;
-                _accountArray['roles'] =  [{'name': '{{ROLE.STAFF}}'}, {'name': '{{ROLE.WRITE_ONLY}}'}];
-                _accountArray['consents'] = getConsents();
-                //console.log(_demoArray)
-
-                _get('/api/account', 'POST', JSON.stringify(_accountArray))
-                .then(function(responseData) {
-
-                    _userId = responseData['user_id'];
-
-                    _demoArray['resourceType'] = 'Patient';
-                    _demoArray['name'] = {
-                        'given': $.trim($('input[name=firstname]').val()),
-                        'family':$.trim($('input[name=lastname]').val())
-                    };
-
-                    _demoArray['birthDate'] = $('input[name=birthDate]').val();
-
-                    _demoArray['telecom'] = [];
-
-                    var emailVal = $.trim($('input[name=email]').val());
-                    if (hasValue(emailVal)) {
-                        _demoArray['telecom'].push({ 'system': 'email', 'value': emailVal });
-                    }
-                    _demoArray['telecom'].push({ 'system': 'phone', 'use': 'mobile', 'value': $.trim($('input[name=phone]').val())});
-                    _demoArray['telecom'].push({ 'system': 'phone', 'use': 'home', 'value': $.trim($('input[name=altPhone]').val())});
-
-                     var orgIDs = $('#userOrgs input:checked').map(function(){
-                        return { reference: 'api/organization/'+$(this).val() };
-                    }).get();
-
-                    _demoArray['careProvider'] = orgIDs;
-
-                    var arrCommunication = OT.getCommunicationArray();
-                    if (arrCommunication.length > 0) {
-                        _demoArray['communication'] = arrCommunication;
-                    };
-
-                    Promise.all([
-                       _get('/api/demographics/'+_userId, 'PUT', JSON.stringify(_demoArray))])
-                    .then(function(results) {
-                        $('#confirmMsg').fadeIn();
-                        setTimeout("$('#confirmMsg').fadeOut();", 800);
-                        setTimeout("_redirect(" + _userId + ");", 1000);
-                        $("#updateProfile").attr("disabled", false);
-                        clear();
-                    }).catch(function(error) {
-                        errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
-                        if (errorMessage != '') $('#serviceErrorMsg').html('<small>Server processing error: ' + errorMessage + '</small>').fadeIn();
-                        tnthAjax.reportError(_userId, "{{url_for('portal.staff_profile_create')}}", errorMessage, true);
-                        $("#updateProfile").attr("disabled", false);
-                    });
-
-                }).catch(function(error) {
-                    //Display Error Here
-                    errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
-                    if (errorMessage != '') $('#serviceErrorMsg').html('<small>Server processing error: ' + errorMessage + '</small>').fadeIn();
-                    tnthAjax.reportError(_userId, "{{url_for('portal.staff_profile_create')}}", errorMessage, true);
-                    $("#updateProfile").attr("disabled", false);
-                });
-
-          };
-    });
-
-    function _get(apiUrl, requestType, requestData, sync) {
-        var errorMessage = '';
-        return new Promise (function(resolve, reject) {
-            $.ajax ({
-                type: (requestType ? requestType : 'GET'),
-                url: String(apiUrl).replace('//', '/'),
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                async: sync ? false : true,
-                data: requestData
-            }).done(function(data) {
-                resolve(data);
-            }).fail(function(xhr) {
-                errorMessage = 'Error processing request: ' + apiUrl;
-                errorMessage += "\nstatus: " + xhr.status;
-                errorMessage +="\nresponse text: " + $.trim(xhr.responseText)
-                reject(Error(errorMessage));
-            });
-
-        });
-
-    };
-
-    function clear() {
-        ['firstname', 'lastname', 'birthday', 'birthdayDay', 'birthdayMonth', 'birthdayYear', 'date', 'year', 'email', 'phone', 'altPhone'].forEach(function(fieldName) {
-            var currentElement = $('#' + fieldName);
-            var _tagName = currentElement.get(0) ? currentElement.get(0).tagName : '';
-            switch(_tagName.toLowerCase()) {
-                case 'input':
-                    currentElement.val('');
-                    break;
-                case 'select':
-                    currentElement.find('option').prop('selected', false);
-                    break;
-                default:
-                    currentElement.val('');
-            };
-
-            $('#month').find('option').prop('selected', false);
-
-        });
-
-    };
-
-    clear();
-
-});
+{%- from "profile_macros.html" import accountCreationScript -%}
+{{accountCreationScript()}}
 {% endblock %}
 {% block footer %}
 {{footer(user=user)}}
+{% endblock %}
+{% block document_ready %}
+    //instantiation of account creation object, note, staff role is passed in
+    var aco = new AccountCreationObj([{'name': '{{ROLE.STAFF}}'}, {'name': '{{ROLE.WRITE_ONLY}}'}]);
 {% endblock %}
