--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% from "flask_user/_macros.html" import back_btn, footer %}
 {% block main %}
-{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn %}
+{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn, accountCreationScript %}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
 <form id="createProfileForm" class="form tnth-form to-validate">
@@ -86,7 +86,6 @@
     {%- endif -%}
 </form>
 <a id="redirectLink" href="">&nbsp;</a>
-{%- from "profile_macros.html" import accountCreationScript -%}
 {{accountCreationScript()}}
 {% endblock %}
 {% block footer %}
