remove sync ajax calls from profile, loading spinner css fixes and timing fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1877,6 +1877,7 @@ table.profile-audit-log TH,
   z-index: 99999;
   color: #444;
   margin: auto;
+  background: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
