--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1741,6 +1741,7 @@ table.profile-audit-log TH,
   z-index: 99999;
   color: #444;
   margin: auto;
+  background-color: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
