--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2025,6 +2025,7 @@ div.noOrg-container {
   z-index: 99999;
   color: #444;
   margin: auto;
+  background: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
