--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1896,6 +1896,7 @@ div.noOrg-container {
   z-index: 99999;
   color: #444;
   margin: auto;
+  background: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
