--- a/portal/templates/scheduled_jobs_list.html
+++ b/portal/templates/scheduled_jobs_list.html
@@ -5,6 +5,7 @@
 
     <h1 class="tnth-headline">{{ _("Scheduled Jobs") }}</h1>
 
+    <h4>{{ _("Current Jobs") }}</h4>
     {% if jobs %}
     <ul>
         {% for job in jobs %}
@@ -20,6 +21,17 @@
     </ul>
     {% else %}
     <p>{{ _("No jobs found.") }}</p>
+    {% endif %}
+
+    <h4>{{ _("Available Tasks") }}</h4>
+    {% if tasks %}
+    <ul>
+        {% for task in tasks %}
+            <li>{{ task }}</li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>{{ _("No tasks found.") }}</p>
     {% endif %}
 
 
