check ipad/webkit in user agent before calling kioskpro method

--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -142,8 +142,8 @@
 
               };
             };
-
-            window.kp_Browser_clearCookies();
+            if (/applewebkit/i.test(String(navigator.userAgent)) &&
+                /ipad/i.test(String(navigator.userAgent))) window.kp_Browser_clearCookies();
 
         });
     </script>
