--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -738,11 +738,16 @@ span.custom-study-id-label {
   td.reports-field div {
     display: inline-block;
     margin: 0.3em auto;
+    white-space: nowrap;
+  }
+  td.reports-field div.staff-html {
+    margin-top: 0.5em;
+    margin-bottom: 0.8em;
   }
   td.reports-field a {
     width: 4em;
     max-width: 100%;
-    padding: 0.7em;
+    padding: 0.5em;
     color: #fff;
     background-color: #7C959E;
     border-color: #7C959E;
@@ -751,6 +756,7 @@ span.custom-study-id-label {
     border-radius: 0;
     letter-spacing: 2px;
     margin: 0 0.2em;
+    white-space: nowrap;
   }
   .eproms-id-label {
     display: none
