--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -420,12 +420,12 @@ h4.detail-title {
   margin: 2em 0;
   min-height: 20vh;
 }
-.terms-container {
-  border-style:ridge;
-  max-height: 250px;
-  overflow: auto;
-  padding: 1em;
-  background-color:#F5F5F5;
+.terms-container {    
+  border-style:ridge;   
+  max-height: 250px;    
+  overflow: auto;   
+  padding: 1em;   
+  background-color:#F5F5F5;   
 }
 #termsText.agreed {
   display: block;
@@ -712,8 +712,7 @@ h4.detail-title {
 }
 #profileStudyIDContainer,
 #studyIdContainer,
-.study-id-view,
-span.custom-study-id-label {
+.study-id-view {
   display: none;
 }
 #adminTable {
@@ -1461,8 +1460,8 @@ span.custom-study-id-label {
 #mainDiv.profile .profile-item-container .view-container td {
   padding: 0.6em 1.5em 0.6em 0;
 }
-#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
-  padding: 0.6em 1em 0 1em;
+#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {    
+  padding: 0.6em 1em 0 1em;   
 }
 #mainDiv.profile .profile-item-container .view-container td:first-of-type {
   display: inline-block;
@@ -1517,8 +1516,8 @@ span.custom-study-id-label {
   max-width: 100%;
   padding: 1em 0;
 }
-.deceased-date-container {
-  margin-top:-8px
+.deceased-date-container {    
+  margin-top:-8px   
 }
 .communication-prompt {
   margin-bottom: 1em;
@@ -2351,8 +2350,8 @@ div.org-container {
     display: none;
   }
 }
-#tnthproc-submit {
-  height: 2.9em;
+#tnthproc-submit {    
+  height: 2.9em;    
 }
 #eventListtnthproc {
   margin-left: 0.5em;
